# fancycam

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md
fancycam/: Makefile  Makefile.pi  pyproject.toml  webserver.py
fancycam/camera/: base_camera.py  camera.py  camera_pi.py
fancycam/fancycam/: __init__.py  camera.py  routes.py
fancycam/fancycam/static/sass/: styles.scss
fancycam/fancycam/static/sass/palettes/: default.scss
fancycam/fancycam/templates/: base.html  index.html
fancycam/make/: common.make
fancycam/tests/: test_truth.py  test_webserver.py
