[tool.poetry]
name = "fancycam"
version = "0.1.0"
description = "New Raspi Camera frontend"
authors = ["Sam Pikesley <sam.pikesley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
libsass = "^0.20.0"  # this needs to go to dev
picamera = {version = "^1.13", optional = true}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.4"
pytest-random-order = "^1.0.4"
pytest-cov = "^2.8.1"
ipdb = "^0.12.3"
pylint = "^2.4.4"
isort = {extras = ["pyproject"], version = "^4.3.21"}

[tool.poetry.extras]
picamera = ["picamera"]

[tool.coverage.report]
fail_under = 100
exclude_lines = ["nocov", "if __name__ == .__main__.:"]
show_missing = true
ignore_errors = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
